--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -12,22 +12,22 @@ body {
     background-color: #e9e9e9;
     font-size: 35px;
     font-family: 'Aldrich', sans-serif;
-    
+
 }
 
 .container {
-user-select: none;
-display: flex;
-flex-direction: column;
-align-items: center;
-height: 100px;
-width: 100px;
-border-radius: 50%;
-background: linear-gradient(145deg, #ffffff, #e4e3e2);
-box-shadow:  20px 20px 60px #d7d6d5,
-             -20px -20px 60px #ffffff;
+    user-select: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background: linear-gradient(145deg, #ffffff, #e4e3e2);
+    box-shadow: 20px 20px 60px #d7d6d5,
+        -20px -20px 60px #ffffff;
 
-padding: 150px;
+    padding: 150px;
 }
 
 .container .tiempo {
@@ -41,13 +41,13 @@ padding: 150px;
     padding: 0 5px;
 }
 
-.container .tiempo span.seg{
-   color: #F88AB0;
-   text-shadow: #F88AB0 1px 0 10px;
+.container .tiempo span.seg {
+    color: #F88AB0;
+    text-shadow: #F88AB0 1px 0 10px;
 }
 
 
- img {
+img {
     width: 30px;
 }
 
@@ -56,33 +56,33 @@ button {
     cursor: pointer;
     border-radius: 50%;
     background: linear-gradient(145deg, #ffffff, #e4e3e2);
-    box-shadow:  20px 20px 60px #d7d6d5,
-                 -20px -20px 60px #ffffff;
+    box-shadow: 20px 20px 60px #d7d6d5,
+        -20px -20px 60px #ffffff;
     margin: 5px;
     padding: 4px;
 }
 
 button:hover {
     background: linear-gradient(145deg, #e4e3e2, #ffffff);
-    box-shadow:  20px 20px 60px #d7d6d5,
-             -20px -20px 60px #ffffff;
+    box-shadow: 20px 20px 60px #d7d6d5,
+        -20px -20px 60px #ffffff;
 }
 
-button.active, 
+button.active,
 button.stopActive {
     background: linear-gradient(145deg, #e6e6e6, #ffffff);
-    box-shadow:  20px 20px 60px #d9d9d9,
-                 -20px -20px 60px #ffffff;
+    box-shadow: 20px 20px 60px #d9d9d9,
+        -20px -20px 60px #ffffff;
     cursor: not-allowed;
 }
 
-button.active > img, 
-button.stopActive > img{
+button.active>img,
+button.stopActive>img,
+button:active>img {
     filter: invert(87%) sepia(24%) saturate(5208%) hue-rotate(292deg) brightness(100%) contrast(95%);
 }
 
 .container .botones {
     display: flex;
-    margin-top: 25px;  
+    margin-top: 25px;
 }
-
